# libToolingSegmentationFault

./: CMakeLists.txt  README.md
example/: a.c  b.c
include/ASTSyntaxTree/: ASTSyntaxTree.h
src/: CMakeLists.txt
src/ASTSyntaxTree/: ASTSyntaxTree.cpp  CMakeLists.txt
src/DiffBinOpsExtractor/: CMakeLists.txt  main.cpp
